# bifacial_radiance

./: .README.md.un~  .buildinfo  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  2019-02-19_174046.oct  LICENSE  MANIFEST.in  README.html  README.md  README.md~  bifacial_radiance examples.ipynb  bifacial_radiance.py  gencumulative_test.py  genindex.html  index.html  intro.html  manualapi.html  objects.inv  py-modindex.html  pytest.ini  readthedocs-environment.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_build.py  tkinter_bifacialradiance_2.py  tkinter_bifacialradiance_3.py  validation.html  whatsnew.html
.github/: pull_request_template.md
_modules/: index.html
_sources/: README.md  intro.md
_static/: basic.css  documentation_options.js  pygments.css  underscore.js
batch/: README.md  aws-batch.py
bifacial_radiance/: GroupbyCell Example.py  __init__.py  _version.py  analysis.py  bifacial_radiance.py  bifacial_radiance_2UP.py  bifacial_radiance_MainModifiedUntilMay25.py  bifacial_radiance_RichmondModelComparison.py  bifacial_radiance_RichmondModelComparison2.py  bifacial_radiance_scanCentralModuleOnly.py  bifacial_radiance_scanImplemented.py  bifacial_radiance_scanSelectedModule.py  bifacial_radiance_scanSelectedROW.py  config.ini  config.py  dummy.c  foo.py  gui.py  input.py  inputCostal1.py  input_bf.py  input_bf_PVSC.py  interactive_values.py  load.py  loadBFRresults.py  main.py  mismatch.py  modelchain.py  module.py  performance.py  plots_PVSC.py  read_file.py  read_file_old.py  read_inifile.py  readepw.py  test.py  (+6 more)
(+847 files in other folders)
